--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'extreme-startup-player'
+app = 'extreme-startup-player-gazza'
 primary_region = 'lhr'
 
 [build]
